# test_bot

./: .dockerignore  .env.example  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  piccolo_conf.py  pyproject.toml  usefull_links.txt
.github/workflows/: CD.yaml  CI.yaml
testbot/: echo_bot.py  piccolo_app.py  tables.py
testbot/piccolo_migrations/: 2022-11-25T20-17-48-123803.py  2022-11-25T20-43-09-891675.py
testbot/testbot_db/: piccolo_app.py
